--- a/popup.css
+++ b/popup.css
@@ -263,12 +263,12 @@ h1 {
   margin-bottom: 8px;
 }
 
-#totalDisplay {
-  font-weight: 700;
-  color: var(--pink);
-  font-size: 24px;
-  display: block;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+#total {
+ font-weight: 700;
+ color: var(--pink);
+ font-size: 24px;
+ display: block;
+ text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 button {
